// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sqlite/create-initial-migration > should create a simple table with integer values 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value INTEGER NOT NULL,
  PRIMARY KEY (normalize_id)
);"
`;

exports[`sqlite/create-initial-migration > should create a table with mixed integer and real values 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value REAL NOT NULL,
  PRIMARY KEY (normalize_id)
);"
`;

exports[`sqlite/create-initial-migration > should create a table with nullable fields when null values are present 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value INTEGER,
  PRIMARY KEY (normalize_id)
);"
`;

exports[`sqlite/create-initial-migration > should create nested tables for arrays with foreign key relationships 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value TEXT NOT NULL,
  PRIMARY KEY (normalize_id)
);

CREATE TABLE test_items (
  normalize_id INTEGER NOT NULL,
  normalize_parent_id INTEGER NOT NULL,
  value INTEGER NOT NULL,
  PRIMARY KEY (normalize_id),
  FOREIGN KEY (normalize_parent_id) REFERENCES test (normalize_id)
);
CREATE INDEX idx_test_items_normalize_parent_id ON test_items (normalize_parent_id);"
`;

exports[`sqlite/create-initial-migration > should generate migration for objects with different property names 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  a TEXT,
  b TEXT,
  PRIMARY KEY (normalize_id)
);"
`;

exports[`sqlite/create-initial-migration > should handle deeply nested arrays with multiple levels of relationships 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value TEXT NOT NULL,
  PRIMARY KEY (normalize_id)
);

CREATE TABLE test_items (
  normalize_id INTEGER NOT NULL,
  normalize_parent_id INTEGER NOT NULL,
  PRIMARY KEY (normalize_id),
  FOREIGN KEY (normalize_parent_id) REFERENCES test (normalize_id)
);
CREATE INDEX idx_test_items_normalize_parent_id ON test_items (normalize_parent_id);

CREATE TABLE test_items_elements (
  normalize_id INTEGER NOT NULL,
  normalize_parent_id INTEGER NOT NULL,
  value INTEGER NOT NULL,
  PRIMARY KEY (normalize_id),
  FOREIGN KEY (normalize_parent_id) REFERENCES test_items (normalize_id)
);
CREATE INDEX idx_test_items_elements_normalize_parent_id ON test_items_elements (normalize_parent_id);"
`;

exports[`sqlite/create-initial-migration > should handle empty arrays 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  value TEXT NOT NULL,
  PRIMARY KEY (normalize_id)
);

CREATE TABLE test_items (
  normalize_id INTEGER NOT NULL,
  normalize_parent_id INTEGER NOT NULL,
  PRIMARY KEY (normalize_id),
  FOREIGN KEY (normalize_parent_id) REFERENCES test (normalize_id)
);
CREATE INDEX idx_test_items_normalize_parent_id ON test_items (normalize_parent_id);"
`;

exports[`sqlite/create-initial-migration > should handle empty input array 1`] = `
"CREATE TABLE test (
  normalize_id INTEGER NOT NULL,
  PRIMARY KEY (normalize_id)
);"
`;
